[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/InvDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://textures/tilemap/SlotUse.png" type="Texture" id=2]
[ext_resource path="res://src/InventoryContainer.gd" type="Script" id=3]

[node name="InventoryContainer" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvDisplay" parent="CenterContainer" instance=ExtResource( 1 )]
margin_left = 358.0
margin_right = 666.0
margin_bottom = 100.0
rect_scale = Vector2( 1, 1 )

[node name="slot1" type="TouchScreenButton" parent="CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 358, 0 )
normal = ExtResource( 2 )

[node name="slot2" type="TouchScreenButton" parent="CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 462, 0 )
normal = ExtResource( 2 )

[node name="slot3" type="TouchScreenButton" parent="CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 566, 0 )
normal = ExtResource( 2 )

[node name="ProgressBar1" type="ProgressBar" parent="."]
margin_left = 366.0
margin_top = 576.0
margin_right = 449.0
margin_bottom = 91.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar2" type="ProgressBar" parent="."]
margin_left = 471.0
margin_top = 576.0
margin_right = 554.0
margin_bottom = 91.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar3" type="ProgressBar" parent="."]
margin_left = 575.0
margin_top = 576.0
margin_right = 658.0
margin_bottom = 91.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/slot1" to="." method="_on_slot1_pressed"]
[connection signal="pressed" from="CenterContainer/slot2" to="." method="_on_slot2_pressed"]
[connection signal="pressed" from="CenterContainer/slot3" to="." method="_on_slot3_pressed"]
